<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>api</groupId>
	<artifactId>ODataService</artifactId>
	<packaging>war</packaging>
	<version>4.9.0</version>
	<name>ODataService Maven Webapp</name>
	<url>http://maven.apache.org</url>
	<properties>
		<javax.version>4.0.1</javax.version>
		<odata.version>4.9.0</odata.version>
		<slf4j.version>1.7.36</slf4j.version>
	</properties>
	<repositories>
  		<repository>
    		<id>oss-snapshots-repo</id>
    		<name>Sonatype OSS Maven Repository</name>
    		<url>https://oss.sonatype.org/content/groups/public</url>
    		<snapshots>
      			<enabled>true</enabled>
      			<updatePolicy>always</updatePolicy>
    		</snapshots>
  		</repository>
	</repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
        		<configuration>
          			<source>11</source>
          			<target>11</target>
        		</configuration>
            </plugin>
        </plugins>
		<finalName>ODataService</finalName>
    </build>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.olingo</groupId>
			<artifactId>odata-server-api</artifactId>
			<version>${odata.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.olingo</groupId>
			<artifactId>odata-server-core</artifactId>
			<version>${odata.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.olingo</groupId>
			<artifactId>odata-commons-api</artifactId>
			<version>${odata.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.olingo</groupId>
			<artifactId>odata-commons-core</artifactId>
			<version>${odata.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.28</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.36</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
				
		<dependency>
 			<groupId>org.apache.solr</groupId>
  			<artifactId>solr-solrj</artifactId>
  			<version>8.11.1</version>
		</dependency>
		<dependency>
    		<groupId>de.undercouch</groupId>
    		<artifactId>citeproc-java</artifactId>
    		<version>2.0.0</version>
  		</dependency>
   		<dependency>
    		<groupId>org.citationstyles</groupId>
    		<artifactId>styles</artifactId>
    		<version>22.2.1</version>
  		</dependency>
  		<dependency>
    		<groupId>org.citationstyles</groupId>
    		<artifactId>locales</artifactId>
    		<version>22.2.1</version>
  		</dependency>	
	</dependencies>
</project>
